--- a/src/components/shared/CustomButton/customButton.module.scss
+++ b/src/components/shared/CustomButton/customButton.module.scss
@@ -17,3 +17,9 @@
   background-color: var(--primary);
   box-shadow: var(--shadow-primary);
 }
+
+.red {
+  @include font(semibold, p1, (var(--background)));
+  background-color: var(--thirdly);
+  opacity: 0.7;
+}
