--- a/src/components/shared/Logo/logo.module.scss
+++ b/src/components/shared/Logo/logo.module.scss
@@ -5,7 +5,9 @@
   justify-content: center;
   align-items: center;
 
-  &__text {
-    @include font(bold, h3, var(--primary));
+  &_icon {
+    height: 80px;
+    width: 150px;
   }
 }
+
