--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,4 +3,6 @@
 @import "common/variables";
 @import "common/fonts";
 @import "common/mixin";
+@import "theme/ligth";
+@import "theme/dark";
 @import "common/common";
