--- a/src/components/CategoriesInfo/categoriesInfo.module.scss
+++ b/src/components/CategoriesInfo/categoriesInfo.module.scss
@@ -5,12 +5,16 @@
 
   &__title {
     margin: 0 0 $gap-30;
-    @include font(semibold, h2, var(--secondary));
+    @include title2;
   }
 
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: $gap-50;
+
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
   }
 }
