--- a/src/components/Header/Nav/nav.module.scss
+++ b/src/components/Header/Nav/nav.module.scss
@@ -9,14 +9,44 @@
   }
 
   &__item {
-    @include font(regular, p1);
+    @include font(regular, h4, var(--text));
 
     &:not(:last-child) {
       margin-right: 30px;
     }
+
+    & a {
+      position: relative;
+      transition: color 0.3s ease-in-out;
+
+      &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 1px;
+        background-color: var(--thirdly);
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+      }
+
+      &:focus-visible {
+        outline: 1px solid var(--thirdly);
+        outline-offset: 2px;
+      }
+
+      &:hover::before {
+        opacity: 1;
+      }
+
+      &:active {
+        color: var(--thirdly);
+      }
+    }
   }
 
   .active {
-    color: var(--primary);
+    @include font(semibold, h3, var(--secondary));
   }
 }
