--- a/src/components/Header/ThemeSwitcher/themeSwitcher.module.scss
+++ b/src/components/Header/ThemeSwitcher/themeSwitcher.module.scss
@@ -7,8 +7,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: var(--background);
   border-radius: 50px;
   transition: background-color 0.3s ease-in-out;
+
+  &:focus-visible {
+    outline: 1px solid var(--thirdly);
+  }
+
+  &:hover::before,
+  &:active::before {
+    background-color: var(--thirdly);
+  }
 
   &::before {
     content: '';
@@ -17,29 +27,28 @@
     width: 38px;
     height: 38px;
     border-radius: 50px;
+    background-color: var(--secondary);
     z-index: 0;
     transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
   }
 
   &__left {
-    background-color: var(--secondary-light);
-
     &::before {
       transform: translateX(-4px);
-      background-color: var(--primary);
+    }
+
+    & .icon:nth-child(1) {
+      color: var(--text-primary);
     }
   }
 
   &__right {
-    background-color: var(--secondary);
-
     &::before {
       transform: translateX(40px);
-      background-color: var(--thirdly);
     }
 
-    & svg {
-      color: var(--background)
+    & .icon:nth-child(2) {
+      color: var(--text-primary);
     }
   }
 }
@@ -48,6 +57,6 @@
   width: 30px;
   height: 30px;
   display: inline-block;
-  color: var(--secondary);
+  color: var(--text-secondary);
   z-index: 1;
 }
