--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -2,40 +2,63 @@
 
 .hero {
   padding: $gap-30 0;
-  height: 500px;
 
   &__content {
     position: relative;
     width: 100%;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: var(--shadow-secondary);
+    background-color: var(--sixth);
+    box-shadow: var(--shadow);
     overflow: hidden;
+
+    @media (max-width: 768px) {
+      height: 250px;
+    }
   }
 
   &__title {
     margin: 0;
-    padding: 150px 0;
+    padding: 0;
     width: 500px;
     display: flex;
     flex-direction: column;
-    @include font(bold, h1, var(--secondary));
+    @include font(bold, h1, var(--thirdly));
     z-index: 10;
+
+    @media (max-width: 768px) {
+      width: 250px;
+      @include font(bold, h2, var(--thirdly));
+      text-align: center;
+    }
 
     & span:nth-child(1) {
       padding-left: 60px;
       margin-bottom: 20px;
+
+      @media (max-width: 768px) {
+        padding-left: 0;
+      }
     }
 
     & span:nth-child(2) {
       text-align: right;
+
+      @media (max-width: 768px) {
+        text-align: center;
+      }
     }
   }
 
   &__img {
     position: absolute;
     height: 90%;
+
+    @media (max-width: 1024px) {
+      height: 65%;
+    }
   }
 
   &__left {
