--- a/src/components/IngredientsInfo/ingredientsInfo.module.scss
+++ b/src/components/IngredientsInfo/ingredientsInfo.module.scss
@@ -5,23 +5,44 @@
 
   &__title {
     margin: 0 0 $gap-30;
-    @include font(semibold, h2, var(--secondary));
+    @include title2;
   }
 
   &__list {
     margin-bottom: $gap-50;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: 230px;
     gap: $gap-50;
+
+    @media (max-width: 1024px) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 478px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   &__wrapper {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &__btn {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: $gap-30;
+    padding-right: $gap-30;
+    display: flex;
+    align-items: center;
+  }
+
+  &__icon {
+    margin-right: 5px;
+    width: 25px;
+    height: 25px;
   }
 }
