--- a/src/components/Meal/MealInfo/IngredientDetails/ingredientDetails.module.scss
+++ b/src/components/Meal/MealInfo/IngredientDetails/ingredientDetails.module.scss
@@ -4,7 +4,7 @@
 
   & span:nth-child(2) {
     flex: 1 0;
-    border-bottom: 1px dotted #000;
+    border-bottom: 1px dotted var(--text-primary);
     height: 1em;
     margin: 0 0.5em;
   }
