--- a/src/components/Meal/MealInfo/mealInfo.module.scss
+++ b/src/components/Meal/MealInfo/mealInfo.module.scss
@@ -4,7 +4,11 @@
 
   &__name {
     margin: 0 0 $gap-30;
-    @include font(semibold, h2, var(--secondary));
+    @include font(bold, h1, var(--secondary));
+
+    @media (max-width: 768px) {
+      @include font(bold, h2, var(--secondary));
+    }
   }
 
   &__image {
@@ -20,18 +24,32 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
   }
 
   &__info {
-    flex-basis: 45%;
+    width: 45%;
+
+    @media (max-width: 768px) {
+      width: 100%;
+      margin-bottom: $gap-50;
+    }
   }
 
   &__ingredients {
-    flex-basis: 45%;
+    width: 45%;
+
+    @media (max-width: 768px) {
+      width: 100%;
+    }
   }
 
   &__caption {
     margin: 0 0 15px;
+    @include title2;
   }
 
   &__instructions {
@@ -41,5 +59,9 @@
   &__video {
     width: 100%;
     min-height: 500px;
+
+    @media (max-width: 768px) {
+      min-height: 350px;
+    }
   }
 }
