--- a/src/components/RandomMeal/randomMeal.module.scss
+++ b/src/components/RandomMeal/randomMeal.module.scss
@@ -10,14 +10,32 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
   }
 
   &__title {
     margin: 0;
-    @include font(bold, h2, (var(--secondary)));
+    @include title2;
+
+    @media (max-width: 768px) {
+      margin-bottom: $gap-30;
+    }
   }
 
   &__btn {
-    width: 17%;
+    padding-left: $gap-30;
+    padding-right: $gap-30;
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+
+  &__icon {
+    margin-right: 5px;
+    width: 25px;
+    height: 25px;
   }
 }
