--- a/src/components/shared/DescriptionItem/descriptionItem.module.scss
+++ b/src/components/shared/DescriptionItem/descriptionItem.module.scss
@@ -2,9 +2,20 @@
 
 .descr {
   margin-bottom: 5px;
-  @include font(regular, p1, var(--secondary));
+  @include font(regular, p1, var(--text-primary));
 
   &__title {
-    @include font(semibold, p1, var(--secondary));
+    @include font(semibold, p1, var(--text-primary));
+  }
+
+  & a {
+    word-wrap: break-word;
+    transition: color 0.3s ease-in-out;
+
+    &:focus-visible,
+    &:hover,
+    &:active {
+      color: var(--thirdly);
+    }
   }
 }
