--- a/src/components/shared/Loader/loader.module.scss
+++ b/src/components/shared/Loader/loader.module.scss
@@ -11,7 +11,7 @@
     width: 15px;
     height: 15px;
     display: inline-block;
-    background-color: var(--primary);
+    background-color: var(--text-primary);
     border-radius: 50%;
     animation: loading 1.5s cubic-bezier(0.8, 0.5, 0.2, 1.4) infinite;
     transform-origin: bottom center;
@@ -53,7 +53,7 @@
 @keyframes loading {
   0% {
     transform: translateY(0px);
-    background-color: var(--primary);
+    background-color: var(--text-primary);
   }
 
   50%{
@@ -63,6 +63,6 @@
 
   100%{
     transform: translateY(0px);
-    background-color: var(--primary);
+    background-color: var(--text-primary);
   }
 }
