--- a/src/components/shared/Message/message.module.scss
+++ b/src/components/shared/Message/message.module.scss
@@ -15,5 +15,5 @@
 
 .warn {
   margin: 0;
-  @include font(semibold, h3, var(--secondary));
+  @include font(semibold, h3, var(--text-secondary));
 }
