--- a/src/components/Header/Nav/nav.module.scss
+++ b/src/components/Header/Nav/nav.module.scss
@@ -17,7 +17,7 @@
 
     & a {
       position: relative;
-      transition: color 0.3s ease-in-out;
+      transition: color 0.3s ease-in-out, font-size 0.3s ease-in-out;
 
       &::before {
         content: '';
