--- a/src/components/shared/CustomButton/customButton.module.scss
+++ b/src/components/shared/CustomButton/customButton.module.scss
@@ -1,7 +1,7 @@
 @import "src/styles/common";
 
 .btn {
-  padding: 8px 0;
+  padding: 8px $gap-30;
   border-radius: $border-radius-1x;
   text-align: center;
   transition: color 0.3s ease-in-out,background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
